--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,4 +2,7 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
-@import "search_form"
+@import "search_form";
+@import "footer";
+@import "button";
+@import "card";
