--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
@@ -14,8 +15,9 @@
     <div class="container text-center">
       <%= render 'shared/search_form' %>
       <%= yield %>
-      <%= javascript_include_tag "application" %>
-      <%= javascript_pack_tag "application" %>
     </div>
+    <%= render 'shared/footer' %>
+    <%= javascript_pack_tag "application" %>
+    <%= stylesheet_pack_tag "application" %>
   </body>
 </html>
