--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to cocktails_path , class: "navbar-brand" do %>
+  <%= link_to root_path , class: "navbar-brand" do %>
     <%= image_tag "logo.png" %>
   <% end %>
 
@@ -14,7 +14,7 @@
         <%= link_to "Home", "#", class: "nav-link" %>
       </li> -->
       <li class="nav-item">
-        <%= link_to "+ Add New Cocktail", new_cocktail_path , class: "btn btn-ghost" %>
+        <button type="button" class="btn btn-ghost" data-toggle="modal" data-target="#cocktailModal">+ Add new Cocktail</button>
       </li>
       <!-- <li class="nav-item dropdown">
         <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
@@ -26,3 +26,26 @@
     </ul>
   </div>
 </div>
+
+<div class="modal fade" id="cocktailModal" tabindex="-1" role="dialog" aria-labelledby="cocktailModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="cocktailModalLabel">Create cocktail</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body text-left">
+        <%= simple_form_for @new_cocktail do |f| %>
+          <%= f.input :name %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-ghost" data-dismiss="modal">Close</button>
+        <%= f.submit class: 'btn btn-gradient' %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
