--- a/app/views/cocktails/search_index.html.erb
+++ b/app/views/cocktails/search_index.html.erb
@@ -28,6 +28,6 @@
 <% end %>
 <div class="row justify-content-center py-4">
   <div class="col-8">
-    <%= link_to 'Back to the list', new_cocktail_path %>
+    <%= link_to 'Back to the list', root_path %>
   </div>
 </div>
