--- a/app/views/cocktails/search_index.html.erb
+++ b/app/views/cocktails/search_index.html.erb
@@ -12,8 +12,12 @@
     <div class="col-12">
       <div class="cards">
         <% @cocktails.each do |cocktail| %>
-            <div class="card" style="width: 24rem;">
-              <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card">
+              <% if cocktail.photo.attached? %>
+                <%= cl_image_tag cocktail.photo.key, height: 200, crop: :fill, class: "card-img-top" %>
+              <% else %>
+                <img class="card-img-top">
+              <% end %>
               <div class="card-body">
                 <h2 class="card-title"><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
                 <% cocktail.doses.each do |dose| %>
