--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -2,7 +2,7 @@
   <div class="col-8">
     <%= simple_form_for :search, url: search_path, method: :get do |f| %>
       <div class="search-form-control form-group">
-        <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+        <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="Search your favorite cocktails..." />
         <button name="button" type="submit" class="btn btn-ghost" style="border: none;">
           <i class="fas fa-search"></i> Search
         </button>
